force-app/main/default/objects/Attachment_Metadata__c/Attachment_Metadata__c.object-meta.xml
<CustomObject>
    <label>Attachment_Metadata</label>
    <nameField>
        <label>Attachment_Metadata Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Attachments_Metadata</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>