force-app/main/default/objects/Attachment_Metadata__c/fields/FileSize_kB__c.field-meta.xml
<CustomField>
    <fullName>FileSize_kB__c</fullName>
    <label>FileSize_kB</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>