force-app/main/default/objects/Attachment_Metadata__c/fields/FileType__c.field-meta.xml
<CustomField>
    <fullName>FileType__c</fullName>
    <label>FileType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>