force-app/main/default/objects/Attachment_Metadata__c/fields/VirusScan_Status__c.field-meta.xml
<CustomField>
    <fullName>VirusScan_Status__c</fullName>
    <label>VirusScan_Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Não_Scan</fullName>
            </value>
            <value>
                <fullName>Limpo</fullName>
            </value>
            <value>
                <fullName>Suspeito</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>